# another-rust-terminal-app

./: .dockerignore  Cargo.toml  Dockerfile  README.md  wasmer.toml
src/: main.rs
