[package]
name = "another-rust-terminal-app"
version = "0.1.0"
edition = "2024"

# This let's you set the name of the binary to be `app` which helps with writing universal Dockerfiles
[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
libc = "0.2.151"

[patch.crates-io]
libc = { git = "https://github.com/thenotary/libc", branch = "allow-basic-tcgetattr" }
#libc = { path = "../../open_source/libc" }

[patch."https://github.com/wasix-org/libc"]
libc = { git = "https://github.com/thenotary/libc", branch = "allow-basic-tcgetattr" }
